# XServResDefScreen

./: CMakeLists.txt  README.md
src/: XServResDefScreen.c  XServResDefScreen.h
